@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.973 2003/04/21 03:05:07 jonnymind Exp $
+ * $Id: ChangeLog,v 1.974 2003/04/21 08:09:27 ronpinkas Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,13 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2003-04-21 19:40 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
+  * source/vm/thread.c
+  * include/thread.h
+    ! Better handling of thread startup under linux, resolving a
+      potential loss of memory due to thread cancelation BEFORE
+      thread start.
 
 2003-04-21 01:01 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
   * source/pp/ppcore.c
